<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Quizzy</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="loginDo">LOGIN</string>
    <string name="lp">Lets Play</string>
    <string name="lestPlay">LETS PLAY</string>
    <string name="logout">Logout</string>
    <string name="registerDo">REGISTER</string>
    <string name="resetDo">CLEAR</string>
    <string name="forgotPasswordDo">SEND MAIL</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="registerIntent">Don\'t have an account? Sign Up</string>
    <string name="loginIntent">Already have an account? Sign In</string>
    <string name="forgotPasswordIntent">Forgot Password?</string>
    <string name="hello_world">Hello world!</string>
    <string name="settings">Settings</string>
    <string name="adminText">You are Admin</string>
    <string name="loading">Quizzy is\nLoading</string>
    <string name="question">QUESTION</string>
    <string name="lastLevel">Last Level Cleared</string>
    <string name="answer">ANSWER</string>
    <string name="submit">SUBMIT ANSWER</string>
    <string name="image">image</string>
    <string name="IA">INCORRECT ANSWER</string>
    <string name="leaderboardDo">VIEW LEADERBOARD</string>
    <string name="number">number</string>
    <string name="CA">CORRECT ANSWER</string>
    <string name="noconn">No Internet Connection</string>
    <string name="nextLevel">CONTINUE TO NEXT LEVEL</string>
    <string name="hint">Hint</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="share">SHARE YOUR ACHIEVEMENT</string>
    <string name="appshow">This tutorial will guide you through different parts of Quizzy!</string>
    <string name="c">CONTINUE</string>
    <string name="search_hint">Search For Name</string>
    <string name="action_search">Search</string>
    <string name="my_details">My Details</string>
    <string name="rules">Rules</string>
    <string name="pleaseWait">Please Wait</string>
    <string name="rulesMessage">● Quizzy is a Cryptic Treasure Hunt in which a hint will be provided to you for every question and you are expected to join the hint, question, and the image(if any) together and arrive at a single answer\n\n● Questions can be of any topic, and it is expected that you do thourough research before arriving at an answer\n\n● Answers will always be lower-case, alphanumeric and will contain no spaces, unless stated otherwise. E.g. if the answer to Level 1 is \"Your Name\", input \"yourname\".\n\n●  Beware of the spelling you enter, we cannot auto correct your spellings.\n\n●  You will be ranked in ascending order of the number of levels solved and the time (e.g. 15:36:21 on July 18) at which you crossed the last level.</string>
    <string name="allDone">Congratulations, you\'ve completed all Levels\nYou will be notified when new levels are available!\n\nThank you for playing Quizzy</string>

    <!-- Activity Titles -->
    <string name="title_activity_register">Register</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_lets_play">Lets Play</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_leaderboard">Leaderboard</string>
    <string name="title_activity_question">Questions</string>
    <string name="title_activity_level_transition">Level Transition</string>
    <string name="title_activity_showcase">Quizzy Tutorial</string>

    <string-array name="sampleNames">
        <item>This is the leaderboard for Quizzy</item>
        <item>This list will show you who\'s at the top.</item>
        <item>You can click any name to view more details</item>
        <item>You can swipe down to refresh the list</item>
        <item>Click any of the list items to continue</item>
    </string-array>

</resources>