<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="chipset.quizzy.DashActivity" >

    <item
        android:id="@+id/action_leaderboard"
        android:icon="@drawable/ic_action_leaderboard"
        android:showAsAction="ifRoom"
        android:title="@string/leaderboard"/>
    <item
        android:id="@+id/action_my_details"
        android:icon="@drawable/ic_action_my_details"
        android:showAsAction="ifRoom"
        android:title="@string/my_details"/>
    <item
        android:id="@+id/action_rules"
        android:icon="@drawable/ic_action_rules"
        android:showAsAction="ifRoom"
        android:title="@string/rules"/>
    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/ic_action_logout"
        android:showAsAction="ifRoom"
        android:title="@string/logout"/>

</menu>