<ScrollView xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoize" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/playQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="5dp"
            android:background="@color/turquoize"
            android:padding="10dp"
            android:text="@string/question"
            android:textColor="@color/clouds"
            android:textSize="25sp"
            android:textStyle="italic" />

        <ImageView
            android:id="@+id/playImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@color/black"
            android:contentDescription="@string/image"
            android:visibility="gone" />

        <EditText
            android:id="@+id/playAnswer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="15dp"
            android:background="@color/clouds"
            android:gravity="center_horizontal"
            android:hint="@string/answer"
            android:padding="5dp"
            android:textColor="@color/turquoize"
            android:textSize="20sp" />

        <Button
            android:id="@+id/playSubmitDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_click"
            android:drawableRight="@drawable/ic_submit"
            android:text="@string/submit"
            android:textColor="@color/turquoize" />

        <Button
            android:id="@+id/playSubmitW"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_click_w"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/IA"
            android:textColor="@color/clouds"
            android:visibility="gone" />

        <Button
            android:id="@+id/playSubmitR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_click_r"
            android:clickable="false"
            android:enabled="false"
            android:text="@string/CA"
            android:textColor="@color/clouds"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>