<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/turquoize" >

    <TextView
        android:id="@+id/welcomeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/loading"
        android:textColor="@color/clouds"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/adminText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/adminText"
        android:textColor="@color/clouds"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/letsPlayBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="5dp"
        android:visibility="gone" >

        <TextView
            android:id="@+id/lastLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/lastLevel"
            android:textColor="@color/clouds"
            android:textSize="30sp" />

        <Button
            android:id="@+id/letsPlayDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/button_click"
            android:drawableRight="@drawable/ic_next"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:text="@string/lestPlay"
            android:textColor="@color/turquoize"
            android:visibility="gone" />
    </LinearLayout>

</RelativeLayout>